cabal-version:      3.12
name:               optically

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Liam Goodacre
maintainer:         goodacre.liam@gmail.com

-- A copyright notice.
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Optically
    build-depends:
      , base ^>=4.21.0.0
      , kan-extensions
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
      , QuantifiedConstraints
      , DataKinds
      , DerivingStrategies
      , FunctionalDependencies
      , GADTs
      , LambdaCase
      , QuantifiedConstraints
      , TypeAbstractions
      , TypeData
      , TypeFamilies
      , UndecidableInstances

